public/css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Lilita+One&display=swap");

body {
  background-color: #fff;
  font-family: "Lilita One";
  margin: 0;
}
/* Logo styling */
.container-fluid-home h1 a {
  color: #fbf42c;
  text-align: center;
  text-shadow: 6px 7px 0px #000;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: #000000;
  font-family: "Lilita One";
  font-size: 121px;
  font-style: normal;
  font-weight: 400;
  line-height: 115px; /* 95.041% */
  text-decoration: none;
  text-align: center;
}
.container-fluid-home {
  text-align: center;
}
/* Nav styling */
#nav {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 30px;
  position: absolute;
  bottom: 20px;
  left: 0;
  right: 0;
}
#nav a {
  border-radius: 55px;
  border: 11px solid #ff6d5d;
  background: #000;
  color: #fbdc2c;
  text-align: center;
  text-shadow: 6px 7px 0px #000;
  -webkit-text-stroke-width: 1px;
  font-family: "Lilita One";
  font-size: 45px;
  font-style: normal;
  font-weight: 400;
  line-height: 45px; /* 100% */
  text-decoration: none;
  padding: 10px 20px;
}
#nav a:hover {
  background-color: #ff6e5e;
  color: #fff;
  border-radius: 55px;
  border: 11px solid #000000;
  text-shadow: none;
}

/* Nav Side styling */
#navside {
  display: flex;
  flex-direction: row;
  margin-right: 30px;
  gap: 20px;
}
#hamburger {
  display: none;
}
#navside a {
  color: #fff;

  text-align: center;

  font-family: "Lilita One";
  font-size: 23px;
  font-style: normal;
  font-weight: 400;
  border-radius: 55px;
  border: 4px solid #ff6e5e;
  text-decoration: none;
  padding: 10px 20px;
  background: #000;
}
#navside a:hover {
  background-color: #ff6e5e;
  color: #fff;
  border-radius: 55px;
  border: 4px solid #000000;
  text-shadow: none;
}

/* Suggest page styling */
.containersuggest h2 {
  color: #000000;
  text-align: center;
  font-size: 40px;
}
.container-fluid-suggest h1 a {
  color: #fbf53d;
  text-align: center;
  text-shadow: 2px 5px 0px #000;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: #000;
  font-family: "Lilita One";
  font-size: 44px;
  font-style: normal;
  font-weight: 400;
  line-height: 36px; /* 81.818% */
  text-decoration: none;
  margin-left: 10px;
}
.container-fluid-suggest {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 30px;
}
form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 30px;
  margin: 10px;
}
label {
  display: none;
}
input {
  border-radius: 55px;
  border: 7px solid #ff6d5d;
  background: #000;
  color: #fbf42c;

  font-family: "Lilita One";
  font-size: 34px;
  font-style: normal;
  font-weight: 400;
  line-height: 45px; /* 132.353% */
  text-align: center;
}
input:placeholder-shown {
  color: #fbf42c;

  font-family: "Lilita One";
  font-size: 34px;
  font-style: normal;
  font-weight: 400;
  line-height: 45px; /* 132.353% */
}
.custom-file-upload {
  display: inline-block;
  padding: 10px 20px;
  background-color: #000000;
  color: white;
  border-radius: 55px;
  cursor: pointer;
  font-size: 16px;
}

.custom-file-upload:hover {
  background-color: #ff6d5d;
}
button {
  color: #fff;

  text-align: center;
  font-family: "Lilita One";
  font-size: 32px;
  font-style: normal;
  font-weight: 400;
  line-height: 44px; /* 137.5% */
  border-radius: 55px;
  border: 4px solid #000;

  background: #ff6d5d;
  padding: 10px 20px;
}
button:hover {
  background-color: #000000;
  border: 4px solid #ff6d5d;
}
/* Loginpage styling*/
.container-fluid-login {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 30px;
}
.container-fluid-login h1 a {
  color: #fbf53d;
  text-align: center;
  text-shadow: 2px 5px 0px #000;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: #000;
  font-family: "Lilita One";
  font-size: 44px;
  font-style: normal;
  font-weight: 400;
  line-height: 36px; /* 81.818% */
  text-decoration: none;
  margin-left: 10px;
}
.containerlogin h2 {
  margin-top: 100px;
  text-align: center;
}
.containerlogin form input:placeholder-shown {
  color: #fbf42c;
  font-family: "Lilita One";
  font-size: 34px;
  font-style: normal;
  font-weight: 400;
  line-height: 45px; /* 132.353% */
}
.containerlogin button {
  border-radius: 55px;
  border: 6px solid #000;

  background: #ff6d5d;
  color: #fff;

  text-align: center;
  font-family: "Lilita One";
  font-size: 46px;
  font-style: normal;
  font-weight: 400;
  line-height: 30px; /* 65.217% */
  padding: 20px 45px;
}
/* List/ShowAll Page styling */
.containerlist h2 {
  color: #000000;
  text-align: center;
  font-size: 40px;
}
.container-fluid-list h1 a {
  color: #fbf53d;
  text-align: center;
  text-shadow: 2px 5px 0px #000;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: #000;
  font-family: "Lilita One";
  font-size: 44px;
  font-style: normal;
  font-weight: 400;
  line-height: 36px; /* 81.818% */
  text-decoration: none;
  margin-left: 10px;
}
.container-fluid-list {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 30px;
  margin-bottom: 100px;
}
#list {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 30px;
  flex-wrap: wrap;
}
.site-box {
  display: inline-block;
  width: 250px;
  padding: 10px;
  border: 2px solid black;
  border-radius: 10px;
  text-align: center;
  align-items: center;
  white-space: normal;
  background-color: #f9f9f9;
  margin: 10px;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
}

.site-box img {
  border-radius: 17px;
  border: 1px solid #000;
  width: 240px;
  max-height: 100%;
  object-fit: cover;
  height: 167px;
}

.site-box p {
  font-size: 14px;
  margin-top: 10px;
}

.site-box a {
  text-decoration: none;
  color: black;
  margin: 0 5px;
}
/* ... */

